fix radio gap and mark read button

--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -6,5 +6,6 @@
 
   .radio {
     flex-direction: column;
+    gap: 0.125em;
   }
 }
